--- a/shopping-app/src/component/footer.css
+++ b/shopping-app/src/component/footer.css
@@ -2,8 +2,14 @@
     position: fixed;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 58px;
     bottom: 0;
+    border-top: 0.8px solid rgba(0, 0, 0, 0.158);
+    font-size: 12px;
+    font-weight: 400;
+    color: #888888;
+    line-height: 18px;
   }
