--- a/shopping-app/src/component/header.css
+++ b/shopping-app/src/component/header.css
@@ -3,15 +3,61 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    background-color: white;
     width: 100%;
     height: 80px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.199);
 }
 
 .header-logo {
-    margin-left: 30px;
+    margin-left: 80px;
+    width: 55px;
+    height: 30px;
+}
+
+.header-title {
+    margin-left: 5px;
+    font-size: 32px;
+    font-weight: 700;
 }
 
 .header-menu-icon {
     position: absolute;
-    right: 30px;
+    right: 80px;
+    width: 30px;
+    height: 20px;
+    padding: 0;
+}
+
+.dropdown-menu {
+    position: absolute;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    width: 200px;
+    height: 172px;
+    right: 10px;
+    top: 50px;
+}
+
+img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+button{
+    background-color: white;
+    border: none;
+}
+button:hover{
+    cursor: pointer;
 }
