--- a/shopping-app/src/App.css
+++ b/shopping-app/src/App.css
@@ -1,6 +1,10 @@
+#root {
+  width: 1280px;
+  height: 100%;
+}
 .App {
   width: 1280px;
-  height: 100vh;
+  height: 100%;
 }
 .app-header {
   height: 80px;
@@ -9,6 +13,34 @@
   height: 58px;
 }
 .app-body {
-  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
   margin: 80px;
+  z-index: -999;
+}
+.main {
+  height: 100%;
+}
+
+
+img {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+button{
+  background-color: white;
+  border: none;
+}
+button:hover{
+  cursor: pointer;
 }
