--- a/shopping-app/src/component/footer.css
+++ b/shopping-app/src/component/footer.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: white;
     width: 100%;
     height: 58px;
     bottom: 0;
