--- a/shopping-app/src/component/bookmarkItem.css
+++ b/shopping-app/src/component/bookmarkItem.css
@@ -1,6 +1,5 @@
 .bookmark {
     flex-grow: 1;
-    padding-top: 40px;
 }
 .bookmark-container {
     display: flex;
@@ -16,8 +15,10 @@
     height: 210px;
     flex-grow: 1;
 }
-.img-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
+
+.bookmark-title {
+    font-size: 24px;
+    line-height: 38px;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
