--- a/shopping-app/src/component/productsItem.css
+++ b/shopping-app/src/component/productsItem.css
@@ -1,6 +1,11 @@
 .product {
     flex-grow: 1;
-    padding-bottom: 40px;
+}
+.product-title {
+    font-size: 24px;
+    line-height: 38px;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 .products-container {
     display: flex;
@@ -13,7 +18,47 @@
 }
 
 .products-content {
+    display: flex;
+    flex-direction: column;
+    width: 264px;
+    height: 264px;
+    flex-grow: 1;
+}
+.img-wrapper {
+    position: relative;
     width: 100%;
     height: 210px;
-    flex-grow: 1;
+    border-radius: 10px;
+}
+.product-content-info {
+    width: 100%;
+    height: 54px;
+}
+.product-info-left {
+    text-align: left;
+    display: inline-block;
+}
+.product-info-right {
+    text-align: right;
+    display: inline-block;
+    right: 0;
+}
+.products-name {
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 24px;
+    margin-top: 5px;
+}
+.discount {
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 24px;
+    margin-top: 5px;
+    color: #452CDD;
+}
+.follower {
+    font-size: 16px;
+    font-weight: 800;
+    line-height: 24px;
+    margin-top: 5px;
 }
