--- a/shopping-app/src/App.css
+++ b/shopping-app/src/App.css
@@ -14,6 +14,7 @@
 .app-header {
   width: 100%;
   height: 80px;
+  z-index: 999;
 }
 .app-body {
   display: flex;
@@ -24,7 +25,6 @@
   width: 100%;
   height: 100%;
   flex-grow: 1;
-  z-index: -999;
 }
 .app-footer {
   width: 100%;
@@ -54,4 +54,17 @@ button {
 }
 button:hover {
   cursor: pointer;
+}
+
+/* ProductList page */
+.filter-button-container {
+  display: flex;
+  flex-direction: row;
+  width: 554px;
+  height: 122px;
+}
+.filter-btn-content {
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
 }
